rgw: Read `sync status` from only the zones allowed to sync from

Using multisite sync policy, zones within a zonegroup can be configured
not to sync from certain zones. Filter such zones while reading sync
status.

Fixes: https://tracker.ceph.com/issues/62014
Signed-off-by: Soumya Koduri <skoduri@redhat.com>
(cherry picked from commit 094460c26b8fdd9a72667800b54a0cfaa5409c88)

Conflicts:
	src/rgw/rgw_admin.cc (trivial: store vs driver)